<resources>
    <string name="app_name">Social Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="logo">Logo</string>
    <string name="signup">Sign Up</string>
    <string name="email_warning">Invalid Email</string>
    <string name="password_warning">Password must be at least 6 characters</string>
    <string name="login_succeeded">Login succeeded</string>
    <string name="login_fail">Login fail email or password incorrect</string>
</resources>