<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            app:srcCompat="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/email_icon_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:enabled="true"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordTextField"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            app:hintEnabled="true"
            app:startIconDrawable="@drawable/password_icon_24dp"
            app:endIconMode="custom"
            app:endIconDrawable="@drawable/visibility_icon_24dp"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordEditField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                 />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:enabled="false"
            android:textColor="@color/white"
            android:backgroundTint="@color/brown_light"
            android:text="@string/login" />

        <Button
            style="@style/Widget.Material3.Button.TextButton"
            android:id="@+id/forgotPassButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="true"
            android:text="@string/forgot_pass" />

    </LinearLayout>

    <Button
        android:id="@+id/signupButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearContainer"
        />
</androidx.constraintlayout.widget.ConstraintLayout>